[package]
name = "blog-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
lazy_static = "1.4.0"
matter = "0.1.0-alpha4"
pulldown-cmark = "0.9.2"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
syntect = "4.0"
tera = "1.17.1"
